simulation title corrected

--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Flow through Orifice</title>
+    <title>Flow through Orifice meter</title>
     <link rel="stylesheet" href="css/sgca.css" />
     <link rel="stylesheet" href="css/mathstyle.css" />
     <script type="text/javascript" src="js/jquerymin.js"></script>
@@ -54,13 +54,13 @@
 
         <!--Title of Simulation		-->
         <div id="titleLarge" class="title" style="visibility: visible;">
-            <h3>Flow through Orifice</h3>
+            <h3>Flow through Orifice meter</h3>
         </div>
 
         <!-- erinnn -->
         <div id="titleSmall" class="title2" style="visibility:hidden">
             <!-- <h3 id="ftfmotion" onmouseenter="goToStart(this.id);" onmouseleave="changeOriginal(this.id);">Flow through </h3> -->
-            <h3 id="ftfmotion" onmouseenter="goToStart(this.id);" onmouseleave="changeOriginal(this.id);" style="font-size: 12px;">Flow through Orifice</h3>
+            <h3 id="ftfmotion" onmouseenter="goToStart(this.id);" onmouseleave="changeOriginal(this.id);" style="font-size: 12px;">Flow through Orifice meter</h3>
         </div>
         <!-- erinend -->
         <div id="buttonsList" style="position: absolute; visibility: hidden; top: 20px; left: 400px; color: white; z-index: 1;">
@@ -149,7 +149,7 @@
                         If you get Manometric Overflow Error, go to <span class="fontColorChange">Setup </span>Tab and Change the Manometer.
                     </li>
                     <li>
-                        To Evaluate experiment click on title <span class="fontColorChange">Flow Through Orifice</span>.
+                        To Evaluate experiment click on title <span class="fontColorChange">Flow Through Orifice meter</span>.
                     </li>
                 </ul>
             </div>
@@ -166,7 +166,7 @@
                         Click on <span class="fontColorChange">Evaluate</span> button to see the <span class="fontColorChange">Results</span>.
                     </li>
                     <li>
-                        To perform Experiment again click on title <span class="fontColorChange">Flow Through Orifice</span>.
+                        To perform Experiment again click on title <span class="fontColorChange">Flow Through Orifice meter</span>.
                     </li>
                 </ul>
             </div>
