--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/sgca.css" />
     <link rel="stylesheet" href="css/mathstyle.css" />
     <script type="text/javascript" src="js/jquerymin.js"></script>
-    <script type="text/javascript" src="js/sgca.js"></script>
+    
     <script>
         var simsubscreennum = 0;
         var temp = 0;
@@ -524,8 +524,8 @@
         <script>
             document.write(new Date().getFullYear());
         </script> SOLVE - The Virtual Lab @ NITK Surathkal</div>
-    <script src="https://webisora.com/assets/js/propeller.min.js"></script>
-
+<script src="./js/propeller.min.js"></script>
+<script type="text/javascript" src="js/sgca.js"></script>
 </body>
 
 </html>
